fix: anchor links, header, footer visibility

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -24,6 +24,25 @@ body {
   &.lock{
     overflow: hidden;
   }
+  &.fp-viewing-price,
+  &.fp-viewing-trust{
+    .header,
+    .footer{
+      color: #000;
+    }
+    .header{
+      &__nav-item::after{
+        background-color: #000;
+      }
+    }
+    .main-button{
+      border: 1px solid #000;
+      &:hover {
+        background-color: #000;
+        color: #fff;
+      }
+    }
+  }
 }
 
 ul,
@@ -74,14 +93,6 @@ li {
   line-height: 1.15;
   transition: all .3s;
   overflow: visible;
-  &.dark {
-    border: 1px solid #000;
-
-    &:hover {
-      background-color: #000;
-      color: #fff;
-    }
-  }
 
   &:hover {
     background-color: #fff;
